@@ -1001,7 +1001,6 @@ Creating port.h with necessary definitions.
 ... use (sig_t) for sigaction handler type
 ... configure use of mmap for memory-mapped files
 ... configure use of fchown
-... add function prototype for cuserid
 ... configure use of fchmod
 ... add function prototype for setutent
 ... add function prototype for endutent
@@ -1044,7 +1043,6 @@ adding to the code to the <B>port</B> directory.
 <TR>
 <TD VALIGN=top><LISTING>
 Checking system libraries for functionality to emulate.
-... emulate cuserid
 Done checking system libraries.
 </LISTING></TD>
 
